# tauri

./: bun.lockb  package.json
src/: App.tsx  Login.tsx  OBS.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: key.rs  main.rs  obs.rs  sound.rs  udp.rs
