[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustc-wrapper = "C://Users//kazum//scoop//apps//sccache//current//sccache.exe"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
anyhow = "1.0.86"
obws = {git = 'https://github.com/Kazuryu0907/obws',branch = 'patched'}
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
time = "0.3.36"
tracing-subscriber = "0.3.18"
serde_json = "1.0.121"
once_cell = "1.19.0"
kira = "0.9.3"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[path.crates-io]
